<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:padding="14dp"
    android:paddingBottom="0dp"
    android:background="@color/mainThemeColor"
    android:elevation="6dp">

    <Button
        android:id="@+id/nav_avatar_btn"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:background="#00000000"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:src="@drawable/nav_icon"
        android:elevation="4dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="4dp">

        <TextView
            android:id="@+id/nav_head_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_login"
            android:textColor="#fff"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_used"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="158dp"
        android:background="@color/cardview_dark_background" />

</RelativeLayout>